@@ -3,6 +3,7 @@
 Feeds 6.x 1.0 xxxxxxxxxxxxxxxxxxxx
 ----------------------------------
 
+- #759904 lyricnz: Provide a Google Sitemap Parser.
 - #774858 rjbrown99: Fix Node Processor updates node "created" time when
   updating.
 - #704236 jerdavis: Support mapping to CCK float field.
